styles.css
/* resets */
*,
*::before,
*::after {
  box-sizing: border-box;
}
* {
  margin: 0;
  padding: 0;
  font: inherit;
}
/* general body & html styling */
body {
  min-height: 100vh;
  display: grid;
  grid-template: auto 4fr / 1fr 4fr;
  font-family: "Roboto", sans-serif;
}
/* responsive images/videos */
img,
picture,
svg,
video {
  max-width: 100%;
  height: 2.5vh;
  cursor: pointer;
}
/* general elements styling */
a {
  display: block;
  cursor: pointer;
}
.name,
button,
input,
h3,
h4 {
  cursor: pointer;
}

button:active,
a:active,
img:active,
svg:active,
input:active,
.name:active,
h3:active,
h3:active {
  transform: scale(0.95);
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

/* sidebar styling */
aside {
  grid-column: 1;
  grid-row: 1 / 3;
  display: grid;
  grid-template-rows: minmax(5rem, 5rem) minmax(18rem, 18rem) minmax(auto, auto);
  align-items: flex-start;
  grid-auto-rows: auto;
  gap: 1rem;
  padding-right: 1rem;
  font-weight: bold;
  background-color: #1992d4;
  color: white;
  min-width: 180px;
}
aside svg {
  fill: white;
}
.dashboard-icon {
  padding-top: 1rem;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  font-size: 1.5vw;
  gap: 0.5rem;
  padding-left: 1rem;
}
.dashboard-icon > svg {
  height: clamp(1.5rem,3vh,2.5rem);
  flex-shrink: 0;
}
.page-links,
.settings-and-support {
  padding-left: 1.5rem;
}
.page-links {
  display: grid;
  align-items: center;
  height: fit-content;
  gap: 1rem;
}
.page-links > a {
  display: flex;
  align-items: center;
  height: 100%;
  gap: 1rem;
}
.settings-and-support {
  display: grid;
  height: fit-content;
  gap: 1rem;
}
.settings-and-support > a {
  display: flex;
  align-items: center;
  gap: 1rem;
}
/* header styling */
header {
  grid-column: 2;
  grid-row: 1;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-auto-rows: 1fr;
  padding-bottom: 1rem;
  background-color: white;
}
.searchbar-container {
  grid-column: 1;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 0.5rem;
  padding-left: 2rem;
}
.searchbar-container input {
  height: 30px;
  width: clamp(2rem, 45vw, 45rem);
  border-radius: 10px;
  border-style: none;
  background-color: #e2e8f0;
}
.profile-controls-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: clamp(1rem, 2vw, 1.5rem);
  padding-right: 5rem;
}
.profile-controls-container img {
  height: 45px;
  width: 45px;
}
header img {
  height: 65px;
  width: 65px;
  border-radius: 50%;
}
.greet-message-container {
  display: flex;
  align-items: flex-end;
  padding-left: 2rem;
  gap: 1rem;
}
.greet-message-container p {
  align-self: center;
}
.greet-message-username {
  font-size: 1.3rem;
  font-weight: bold;
}
.buttons-container {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: clamp(1rem, 2vw, 1.2rem);
  padding-right: 2rem;
}
.buttons-container button {
  border-radius: 20px;
  border-style: none;
  padding: 8px 30px;
  color: white;
  background-color: #1992d4;
}
/* main styling */
main {
  display: grid;
  grid-template-columns: 1.5fr 0.5fr;
  grid-template-areas:
    "project announcement"
    "project trending";
  gap: 1.5rem;
  padding: 2rem 2rem 4rem 1.5rem;
  background-color: #e2e8f0;
}
main > .projects-area {
  grid-area: project;
}
main > .announcements-area {
  grid-area: announcement;
}
main > .trending-area {
  grid-area: trending;
}
main > div > p {
  font-size: 1.2rem;
}
.project-card,
.announcements-cards-container,
.trending-cards-container {
  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
  border-radius: 10px;
}
/* project area & children elements styling */
.projects-area {
  display: grid;
  grid-template-rows: auto 1fr;
  gap: 0.5rem;
}
.projects-cards-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: 1fr;
  gap: 1.5rem;
  height: 100%;
}

.projects-cards-container > div {
  height: 100%;
}
.projects-cards-container > div {
  border-left: 8px solid #ebbb4c;
  border-radius: 10px;
  background-color: white;
  height: 100%;
}
.project-card {
  display: flex;
  flex-direction: column;
  padding: 2rem 1.5rem;
  height: 100%;
}
.project-card h4 {
  font-weight: 600;
  margin-bottom: 0.5rem;
}
.project-card p {
  color: rgba(0, 0, 0, 0.5);
}
.svg-container {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  gap: 1.5rem;
  margin-top: auto;
}
/* announcement area & children elements styling */
.announcements-area {
  display: grid;
  grid-template-rows: auto 1fr;
  gap: 0.5rem;
  height: 100%;
}

.announcements-cards-container {
  display: grid;
  grid-auto-rows: auto;
  padding: 2.5rem 1.5rem 2.5rem 1.5rem;
  border-radius: 10px;
}
.announcements-area div {
  background-color: white;
}
.announcements-cards-container > .announcement-card:first-child {
  border-top: none;
}
.announcement-card:not(:last-child) {
  padding-bottom: 1.5rem;
}
.announcement-card:not(:first-child) {
  border-top: 1px solid #eaeaea;
  padding-top: 1.5rem;
}
.announcement-card {
  display: flex;
  flex-direction: column;
  border-top: 1px solid #eaeaea;
}
.announcement-card p {
  color: rgba(0, 0, 0, 0.5);
}
.announcement-card h3 {
  font-weight: 600;
  color: black;
}
/* trending area & children elements styling */
.trending-area {
  display: grid;
  grid-template-rows: auto 1fr;
  gap: 0.5rem;
}
.trending-cards-container {
  display: grid;
  padding: 1rem 2rem 2rem 1.5rem;
  border-radius: 10px;
  gap: 1.5rem;
}
.trending-area div {
  background-color: white;
}
.trending-cards h3 {
  font-weight: 600;
}
.trend-card {
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  gap: 1rem;
}
.trend-card img {
  height: 45px;
  width: 45px;
  border-radius: 50%;
  object-fit: cover;
}
.trend-card p {
  color: rgba(0, 0, 0, 0.5);
}
.trend-card p span {
  color: black;
}

